<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    android:background="@drawable/animation_list"
    >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fadingEdge="none"
        android:fillViewport="true"
        android:isScrollContainer="true"
        android:scrollbars="none"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/animation_list">

            <android.support.v7.widget.CardView
                android:id="@+id/nameCardView"
                cardBackgroundColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/dg_logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/s_fb"
                        android:layout_width="43dp"
                        android:layout_height="43dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="85dp"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/facebook_login" />

                    <ImageView
                        android:id="@+id/s_google"
                        android:layout_width="43dp"
                        android:layout_height="43dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/google" />

                    <ImageView
                        android:id="@+id/s_linkedin"
                        android:layout_width="43dp"
                        android:layout_height="43dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/linkedin_icon" />

                    <ImageView
                        android:id="@+id/s_twitter"
                        android:layout_width="43dp"
                        android:layout_height="43dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/twitter_icon" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
<!--
                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="235dp"
                        android:layout_marginBottom="0dp"

                        android:background="@color/colorPrimaryDark"

                        android:textColor="@color/colorAccent"
                        android:text="Login" />-->
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:layout_margin="5dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="255dp"
                    android:orientation="horizontal"
                    android:background="@drawable/animation_list">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="255dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:text="About Us"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:gravity="center"

                            android:text="@string/aboutus" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dip">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/personallaw" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="230dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp"
                            android:text="Read More..."
                            android:textSize="15dp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

         <!--   <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dip">

                <VideoView
                    android:id="@+id/step1Vid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

                <MediaController
                    android:id="@+id/mediaController2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/step1Vid" />
            </android.support.v7.widget.CardView>-->


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dip">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView119"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/corporatelaw" />

                        <TextView
                            android:id="@+id/textView66"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="230dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp"
                            android:text="Read More..."
                            android:textSize="15dp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="10dip">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:orientation="horizontal"
                    android:background="@drawable/animation_list">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/textView44"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="4dp"
                            android:gravity="center"
                            android:text="Testimonials"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/imageView12"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="150dp"
                            app:srcCompat="@drawable/client1_im_2" />


                        <TextView
                            android:id="@+id/testimonial_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:text="@string/testi"
                            android:textStyle="italic"

                            />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/t_name"
                            android:textSize="10dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView81"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/position"
                            android:textSize="10dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView813"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:gravity="center"
                            android:text="@string/c_name"
                            android:textSize="10dp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dip">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="20dp"
                            android:gravity="center"
                            android:text="Contact Us"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="MyDigiLaw"
                            android:textSize="15dp" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="Armenian Street | Parry's Corner"
                            android:textSize="15dp" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text=" George Town,Chennai ."
                            android:textSize="15dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView15"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="4dp"
                                app:srcCompat="@drawable/w_icon" />

                            <TextView
                                android:id="@+id/textView14"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:layout_marginRight="4dp"
                                android:text="www.mydigilaw.com" />

                            <ImageView
                                android:id="@+id/imageView16"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_marginRight="4dp"
                                app:srcCompat="@drawable/email_icon" />

                            <TextView
                                android:id="@+id/textView15"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="mydigilaw@gmail.com" />
                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>